google-site-verification bug :bug:

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Arthur Parkhisenko">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
     <meta property="og:site_name" content="Ikeagold Web-Developer">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en">
@@ -21,6 +20,7 @@
     <meta name="dcterms.subject" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
     <meta name="dc.description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
     <meta name="dc.creator" content="Arthur Parkhisenko">
+    <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo" />
     <link rel="canonical" href="https://ikeagold.github.io/">
     <style>body{font-family:'Roboto Condensed',sans-serif;font-weight:300;color:#454545;padding:2%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:400}</style>
     <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
