decided to choose pt sans and helvetica neue :abc:

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta name="dc.creator" content="Arthur Parkhisenko">
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
-        <style>body{font-family:'Roboto Condensed',sans-serif;font-weight:300;color:#454545;padding:2%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:400}</style>
+        <style>body{font-family:'PT Sans','HelveticaNeue-Light','Helvetica Neue Light','Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;font-weight:300;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
         <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
     </head>
     <body>
@@ -34,6 +34,6 @@
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
-        <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");var WebFontConfig={google:{families:["Roboto+Condensed:700,300,400:latin"]}};!function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
+        <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
     </body>
 </html>
