added missing and new :new:

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </head>
     <body>
         <h1>Arthur (Ikeagold) Web-Developer</h1>
-        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL/MongoDB, Yii, NodeJS</strong></p>
+        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, Gulp, SQL/MongoDB, Yii, NodeJS, Ionic, Bootstrap</strong></p>
         <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
-        <br/>Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart.
+        <br/>Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart, Sass, Bower, Yeoman, Modernizr, Karma.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
