fontstack upd helvetica

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta name="dc.creator" content="Arthur Parkhisenko">
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
-        <style>body{font-family:'Helvetica Neue',Helvetica,'RobotoRegular','Droid Sans',Arial,'Segoe UI',Segoe,'Lucida Grande',sans-serif;font-weight:300;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
+        <style>body{font-family:'HelveticaNeue-Light','Helvetica Neue Light','Helvetica Neue','RobotoRegular','Droid Sans','Segoe UI',Helvetica,Arial,Segoe,'Lucida Grande',sans-serif;font-weight:300;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
         <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
     </head>
     <body>
