--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Ikeagold Web-Developer</title>
+        <title>Ikeagold Web-Developer - Arthur Parkhisenko</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
@@ -23,14 +23,15 @@
         <meta name="dc.creator" content="Arthur Parkhisenko">
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
-        <style>body{font-family:'HelveticaNeue-Light','Helvetica Neue Light','Helvetica Neue','RobotoRegular','Droid Sans','Segoe UI',Helvetica,Arial,Segoe,'Lucida Grande',sans-serif;font-weight:300;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
+        <style>body{font-family:'HelveticaNeue-Light','Helvetica Neue Light','Helvetica Neue','RobotoRegular','Droid Sans','Segoe UI',Helvetica,Arial,Segoe,'Lucida Grande',sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
         <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
     </head>
     <body>
-        <h1>Arthur (Ikeagold) Web-Developer</h1>
-        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, Gulp, SQL/MongoDB, Yii, NodeJS, Ionic, Bootstrap</strong></p>
-        <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
-        <br/>Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart, Sass, Bower, Yeoman, Modernizr, Karma.
+        <h1>Ikeagold Web-Developer</h1>
+        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL/MongoDB, Yii, Ionic, Bootstrap</strong></p>
+        <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
+        <br/><i>I like to use</i>: <a href="https://atom.io">Atom</a>, Gulp, Bower, NodeJS, Nginx, normalize.css, html5shiv.js.
+        <br/>Have experience with: WordPress, Less/Sass, Yeoman, Modernizr, Karma, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
