--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
-        <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, flickshine.com, IT, mobile, app, applications, responsive, adaptive, websites">
+        <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
         <meta name="author" content="Arthur Parkhisenko">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -15,7 +15,7 @@
         <meta property="og:title" content="Ikeagold Web-Developer">
         <meta property="og:description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
         <meta property="og:url" content="https://ikeagold.github.io/">
-        <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, flickshine.com, IT, mobile, app, applications, responsive, adaptive, websites">
+        <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
         <meta name="dc.title" content="Ikeagold Web-Developer">
         <meta name="dc.language" content="en">
         <meta name="dcterms.subject" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
@@ -28,10 +28,10 @@
     </head>
     <body>
         <h1>Ikeagold Web-Developer</h1>
-        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL/MongoDB, Yii, Ionic, Bootstrap</strong></p>
+        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap</strong></p>
         <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
         <br/><i>I like to use</i>: <a href="https://atom.io">Atom</a>, Gulp, Bower, NodeJS, Nginx, normalize.css, html5shiv.js.
-        <br/>Have experience with: WordPress, Less/Sass, Yeoman, Modernizr, Karma, Ruby/RoR, Laravel, OpenCart.
+        <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, MongoDB, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
