--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap</strong></p>
         <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
         <br/><i>I like to use</i>: <a href="https://atom.io">Atom</a>, Gulp, Bower, NodeJS, Nginx, normalize.css, html5shiv.js.
-        <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, MongoDB, Ruby/RoR, Laravel, OpenCart.
+        <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
