--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br/><i>I like to use</i>: <a href="https://atom.io">Atom</a>, Gulp, Bower, NodeJS, Nginx, normalize.css, html5shiv.js.
         <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-        Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>
+        Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold/">Habr</a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
         <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
     </body>
