--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold/">Habr</a>, <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238"><abbr title="Microsoft Virtual Academy">MVA</abbr></a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
-        <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
+        <script>!function(a,b,c,d,e){a.GoogleAnalyticsObject=c,a[c]||(a[c]=function(){(a[c].q=a[c].q||[]).push(arguments)}),a[c].l=+new Date,d=b.createElement("script"),e=b.scripts[0],d.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(d,e)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
     </body>
 </html>
