photoshop and typo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>Ikeagold Web-Developer</h1>
         <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap</strong></p>
         <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
-        <br/><i>I like to use</i>: ST3/Atom/Brackets/PHPStorm, GulpJS, Bower, NodeJS, Nginx, Emmet, normalize.css, html5shiv.js.
+        <br/><i>I like to code with</i>: ST3/Atom/Brackets/PHPStorm, GulpJS, Bower, NodeJS, Nginx, Emmet, Photoshop, normalize.css, html5shiv.js.
         <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
         Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold/">Habr</a>, <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238"><abbr title="Microsoft Virtual Academy">MVA</abbr></a>
