+ codepen url (forks and etc snippets)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br/><i>I like to code with</i>: ST3/Atom/Brackets/PHPStorm, GulpJS, Bower, NodeJS, Nginx, Emmet, Photoshop, normalize.css, html5shiv.js.
         <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart.
         <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-        Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold/">Habr</a>, <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238"><abbr title="Microsoft Virtual Academy">MVA</abbr></a>
+        Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold">Habr</a>, <a href="http://codepen.io/ikeagold">CodePen</a>, <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238"><abbr title="Microsoft Virtual Academy">MVA</abbr></a>
         <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
         <script>!function(a,b,c,d,e){a.GoogleAnalyticsObject=c,a[c]||(a[c]=function(){(a[c].q=a[c].q||[]).push(arguments)}),a[c].l=+new Date,d=b.createElement("script"),e=b.scripts[0],d.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(d,e)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
     </body>
