new layout/structure/seo, protected mail :8ball:

--- a/index.html
+++ b/index.html
@@ -1,40 +1,88 @@
 <!doctype html>
 <html lang="en">
+
     <head>
-        <title>Ikeagold Web-Developer - Arthur Parkhisenko</title>
+        <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
+        <meta name="description" content="I am creating custom applications and websites.">
         <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
         <meta name="author" content="Arthur Parkhisenko">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
-        <meta property="og:site_name" content="Ikeagold Web-Developer">
-        <meta property="og:type" content="website">
         <meta property="og:locale" content="en">
-        <meta property="og:title" content="Ikeagold Web-Developer">
-        <meta property="og:description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
+        <meta property="og:title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+        <meta property="og:description" content="I am creating custom applications and websites.">
+        <meta property="og:site_name" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+        <meta property="og:type" content="website">
         <meta property="og:url" content="https://ikeagold.github.io/">
         <meta property="og:keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
-        <meta name="dc.title" content="Ikeagold Web-Developer">
         <meta name="dc.language" content="en">
-        <meta name="dcterms.subject" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
-        <meta name="dc.description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
+        <meta name="dc.title" content="Arthur Parkhisenko - Web-Developer | Ikeagold">
+        <meta name="dc.description" content="I am creating custom applications and websites.">
         <meta name="dc.creator" content="Arthur Parkhisenko">
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
-        <style>body{font-family:'Noto Sans','Helvetica Neue','Roboto','Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:bold}</style>
-        <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
+        <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv,rem'></script><![endif]-->
+        <style>body{font-family:'Noto Sans','Helvetica Neue','Roboto','Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9rem;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5rem}h2{margin:0;font-size:1.1rem}summary{outline:0}address{display:inline}a,a:visited{color:#454545;transition:500ms}a:hover,a:active{color:#fafafa;background:#454545}.dashed{border-bottom:1px dashed #454545}.cc0{font-size:.7em;color:lightgray}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}</style>
     </head>
-    <body>
-        <h1>Ikeagold Web-Developer</h1>
-        <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap</strong></p>
-        <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
-        <br/><i>I like to code with</i>: ST3/Atom/Brackets/PHPStorm, GulpJS, Bower, NodeJS, Nginx, Emmet, Photoshop, normalize.css, html5shiv.js.
-        <br/>Have experience with: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart.
-        <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-        Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/ikeagold">Toster</a>, <a href="http://habrahabr.ru/users/ikeagold">Habr</a>, <a href="http://codepen.io/ikeagold">CodePen</a>, <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238"><abbr title="Microsoft Virtual Academy">MVA</abbr></a>
-        <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
+
+    <body itemscope itemtype="http://schema.org/Person">
+        <header role="banner">
+            <!-- img itemprop="image" float left and padding right -->
+            <hgroup>
+                <h1 itemprop="name">Arthur Parkhisenko</h1>
+                <h2>www. www always changes</h2>
+            </hgroup>
+        </header>
+
+        <main role="main">
+
+            <div class="ulist">
+                <strong><em>Skills:</em></strong>
+                <br/>html, js, css, php, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
+            </div>
+
+            <div class="ulist">
+                <strong><em>&lt;/&gt; with:</em></strong>
+                <br/>PHPStorm, Composer, Bower, NodeJS, Emmet, cdn.jsdelivr.net
+            </div>
+            <br/>
+
+            <details>
+                <summary><strong><em class="dashed more">More:</em></strong></summary>
+                <p><em>Knows:</em> ST3, Atom, Brackets, normalize.css, html5shiv.js
+                    <br/><br/><em>Have experience with</em>: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart, Nginx, Photoshop, Illustrator
+                </p>
+            </details>
+
+            <br/>I am not looking for a job.
+            <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) working on creating applications and websites.
+        </main>
+
+        <br/>
+
+        <footer role="contentinfo">
+            Feel free to contact me for any cooperation. I reply back soon ^^:
+            <br/>
+            <address>
+                <a class="dashed" href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">i...@gmail.com</a>,
+                <a href="skype:isterik13?chat">Skype</a>,
+                <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher">Google+</a>,
+                <a href="https://github.com/ikeagold">GitHub</a>,
+                <a href="http://toster.ru/user/ikeagold">Toster</a>,
+                <a href="http://habrahabr.ru/users/ikeagold">Habr</a>,
+                <a href="http://codepen.io/ikeagold">CodePen</a>,
+                <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238">
+                    <abbr title="Microsoft Virtual Academy">MVA</abbr>
+                </a>
+            </address>
+            <br/>
+            <br/>
+            <a class="cc0" href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a>
+        </footer>
+
         <script>!function(a,b,c,d,e){a.GoogleAnalyticsObject=c,a[c]||(a[c]=function(){(a[c].q=a[c].q||[]).push(arguments)}),a[c].l=+new Date,d=b.createElement("script"),e=b.scripts[0],d.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(d,e)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
     </body>
+
 </html>
