a:hover effect, rem->em (in this case nosense).

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <meta name="dc.creator" content="Arthur Parkhisenko">
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
-        <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv,rem'></script><![endif]-->
-        <style>body{font-family:'Noto Sans','Helvetica Neue','Roboto','Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9rem;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5rem}h2{margin:0;font-size:1.1rem}summary{outline:0}address{display:inline}a,a:visited{color:#454545;transition:500ms}a:hover,a:active{color:#fafafa;background:#454545}.dashed{border-bottom:1px dashed #454545}.cc0{font-size:.7em;color:lightgray}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}</style>
+        <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
+        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#454545,#454545) no-repeat bottom/100% 1px;transition:background-size .2s,color .1s .1s;color:#454545;margin:0 .2em;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}.dashed{border-bottom:1px dashed #454545}.cc0{font-size:.7em}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}</style>
     </head>
 
     <body itemscope itemtype="http://schema.org/Person">
