dir="ltr", WebPage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr" itemscope itemtype="http://schema.org/WebPage">
 
     <head>
         <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
