small vs css? :lipstick:

--- a/index.html
+++ b/index.html
@@ -24,36 +24,32 @@
         <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
         <link rel="canonical" href="https://ikeagold.github.io/">
         <!--[if lt IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"><script src='//cdn.jsdelivr.net/g/html5shiv'></script><![endif]-->
-        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#454545,#454545) no-repeat bottom/100% 1px;transition:background-size .2s,color .1s .1s;color:#454545;margin:0 .2em;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}.dashed{border-bottom:1px dashed #454545}.cc0{font-size:.7em}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}</style>
+        <style>body{font-family:'Noto Sans','Helvetica Neue',Roboto,'Droid Sans','Segoe UI','Fira Sans','Lucida Grande',Helvetica,Arial,sans-serif;font-weight:400;color:#454545;padding:2%;font-size:.9em;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;max-width:720px;margin:0 auto}h1{margin:0;font-size:1.5em}h2{margin:0;font-size:1.1em}summary:focus{outline:0}address{display:inline}a,a:visited{border:none;background:linear-gradient(#454545,#454545) no-repeat bottom/100% 1px;transition:background-size .2s,color .1s .1s;color:#454545;margin:0 .2em;text-decoration:none}a:active,a:hover{color:#fafafa;background-size:100% 100%}.dashed{border-bottom:1px dashed #454545}.ulist{padding:10px 0;width:49%;display:inline-block;vertical-align:top}</style>
     </head>
 
     <body itemscope itemtype="http://schema.org/Person">
         <header role="banner">
-            <!-- img itemprop="image" float left and padding right -->
+                <!-- img itemprop="image" float left and padding right -->
                 <h1 itemprop="name">Arthur Parkhisenko</h1>
                 <h2>www. www always changes</h2>
         </header>
 
         <main role="main">
-
             <div class="ulist">
                 <strong><em>Skills:</em></strong>
                 <br/>html, js, css, php, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
             </div>
-
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
                 <br/>PHPStorm, Composer, Bower, NodeJS, Emmet, cdn.jsdelivr.net
             </div>
             <br/>
-
             <details>
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
                 <p><em>Knows:</em> ST3, Atom, Brackets, normalize.css, html5shiv.js
                     <br/><br/><em>Have experience with</em>: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart, Nginx, Photoshop, Illustrator
                 </p>
             </details>
-
             <br/>I am not looking for a job.
             <br/>Currently an <span itemprop="jobTitle">Web-Developer</span> at <a href="http://flickshine.com" target="_blank" itemprop="affiliation">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>) working on creating applications and websites.
         </main>
@@ -75,9 +71,8 @@
                     <abbr title="Microsoft Virtual Academy">MVA</abbr>
                 </a>
             </address>
-            <br/>
-            <br/>
-            <a class="cc0" href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a>
+            <br/><br/>
+            <small><a href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">the cake is a lie</a></small>
         </footer>
 
         <script>!function(a,b,c,d,e){a.GoogleAnalyticsObject=c,a[c]||(a[c]=function(){(a[c].q=a[c].q||[]).push(arguments)}),a[c].l=+new Date,d=b.createElement("script"),e=b.scripts[0],d.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(d,e)}(window,document,"ga"),ga("create","UA-36592065-4"),ga("send","pageview");</script>
