--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" dir="ltr" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en" dir="ltr" itemscope itemtype="http://schema.org/WebPage" prefix="og: http://ogp.me/ns#">
 
     <head>
         <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
