charset right-way :secret:

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
-        <meta charset="utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="I am creating custom applications and websites.">
         <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, IT, websites, mobile, app, applications, responsive, adaptive">
