--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <main role="main">
             <div class="ulist">
                 <strong><em>Skills:</em></strong>
-                <br/>html, js, css, php, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
+                <br/>HTML, CSS, JavaScript, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
             </div>
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
-                <br/>PHPStorm, Composer, Bower, NodeJS, Emmet, cdn.jsdelivr.net
+                <br/>PHPStorm, Composer, Bower, NodeJS, Xdebug, Emmet, cdn.jsdelivr.net
             </div>
             <br/>
             <details>
