--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <a href="http://toster.ru/user/ikeagold">Toster</a>,
                 <a href="http://habrahabr.ru/users/ikeagold">Habr</a>,
                 <a href="http://codepen.io/ikeagold">CodePen</a>,
+                <a href="https://coderwall.com/ikeagold">CoderWall</a>,
                 <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238">
                     <abbr title="Microsoft Virtual Academy">MVA</abbr>
                 </a>
