scss, rubymine, spy-js, bundler

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         <main role="main">
             <div class="ulist">
                 <strong><em>Skills:</em></strong>
-                <br/>HTML, CSS, JavaScript, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
+                <br/>HTML, CSS, SCSS, JavaScript, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
             </div>
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
-                <br/>PHPStorm, Composer, Bower, NodeJS, Xdebug, Emmet, cdn.jsdelivr.net
+                <br/>Atom, PHPStorm, RubyMine, Composer, Bower, PostCSS, NodeJS, Xdebug, Spy-Js, Emmet, cdn.jsdelivr.net
             </div>
             <br/>
             <details>
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
-                <p><em>Knows:</em> ST3, Atom, Brackets, normalize.css, html5shiv.js
-                    <br/><br/><em>Have experience with</em>: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Laravel, OpenCart, Nginx, Photoshop, Illustrator
+                <p><em>Knows:</em> ST3, Brackets, normalize.css, html5shiv.js
+                    <br/><br/><em>Have experience with</em>: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator
                 </p>
             </details>
             <br/>I am not looking for a job.
