--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" dir="ltr" itemscope itemtype="http://schema.org/WebPage" prefix="og: http://ogp.me/ns#">
+<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
 
     <head>
         <title>Arthur Parkhisenko - Web-Developer | Ikeagold</title>
@@ -30,15 +30,15 @@
 
     <body itemscope itemtype="http://schema.org/Person">
         <header role="banner">
-                <!-- img itemprop="image" float left and padding right -->
-                <h1 itemprop="name">Arthur Parkhisenko</h1>
-                <h2>www. www always changes</h2>
+            <!-- img itemprop="image" float left and padding right -->
+            <h1 itemprop="name">Arthur Parkhisenko</h1>
+            <h2>www. www always changes</h2>
         </header>
 
         <main role="main">
             <div class="ulist">
                 <strong><em>Skills:</em></strong>
-                <br/>HTML, CSS, SCSS, JavaScript, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
+                <br/>HTML, CSS, SCSS, JavaScript, ES6/7, PHP, AngularJS, PhoneGap, SQL, Yii, WordPress, Ionic, Bootstrap
             </div>
             <div class="ulist">
                 <strong><em>&lt;/&gt; with:</em></strong>
@@ -48,7 +48,7 @@
             <details>
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
                 <p><em>Knows:</em> ST3, Brackets, normalize.css, html5shiv.js
-                    <br/><br/><em>Have experience with</em>: Less/Sass, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator
+                    <br/><br/><em>Have experience with</em>: Less/Sass, BabelJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator
                 </p>
             </details>
             <br/>I am not looking for a job.
