--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
             <address>
                 <a class="dashed" href="http://www.google.com/recaptcha/mailhide/d?k=01DzQH5F9TxxAudBqco6mMew==&amp;c=rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501DzQH5F9TxxAudBqco6mMew\75\75\46c\75rY87VHfX9XYyAQwYRSN5KBXfrsP6Mt_1o0CDcjE9pZQ\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">i...@gmail.com</a>,
                 <a href="skype:isterik13?chat">Skype</a>,
-                <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher">Google+</a>,
-                <a href="https://github.com/ikeagold">GitHub</a>,
-                <a href="http://toster.ru/user/ikeagold">Toster</a>,
-                <a href="http://habrahabr.ru/users/ikeagold">Habr</a>,
-                <a href="http://codepen.io/ikeagold">CodePen</a>,
-                <a href="https://coderwall.com/ikeagold">CoderWall</a>,
-                <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238">
+                <a itemprop="url" href="https://plus.google.com/115456555991025584178?rel=author" rel="publisher" target="_blank">Google+</a>,
+                <a href="https://github.com/ikeagold" target="_blank">GitHub</a>,
+                <a href="http://toster.ru/user/ikeagold" target="_blank">Toster</a>,
+                <a href="http://habrahabr.ru/users/ikeagold" target="_blank">Habr</a>,
+                <a href="http://codepen.io/ikeagold" target="_blank">CodePen</a>,
+                <a href="http://www.codewars.com/users/ikeagold" target="_blank">Codewars</a>,
+                <a href="https://coderwall.com/ikeagold" target="_blank">CoderWall</a>,
+                <a href="http://www.microsoftvirtualacademy.com/Profile.aspx?alias=2930238" target="_blank">
                     <abbr title="Microsoft Virtual Academy">MVA</abbr>
                 </a>
             </address>
