--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <details>
                 <summary><strong><em class="dashed more">More:</em></strong></summary>
                 <p><em>Knows:</em> ST3, Brackets, normalize.css, html5shiv.js
-                    <br/><br/><em>Have experience with</em>: Less/Sass, BabelJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator
+                    <br/><br/><em>Have experience with</em>: Less/Sass, BabelJS, Yeoman, Modernizr, Karma, Handlebars, Polymer, MongoDB, Ruby/RoR, Bundler, Laravel, OpenCart, Nginx, Photoshop, Illustrator, Gimp
                 </p>
             </details>
             <br/>I am not looking for a job.
